--- a/JCP_iPortfolio/index.html
+++ b/JCP_iPortfolio/index.html
@@ -584,7 +584,7 @@
 
         <div class="section-title">
           <h2>About us</h2>
-          <p>The JCJ Alliance was formed by Information Security Professionals Jazmine Mack, Colin Safreed, and Jose Rosario.
+          <p>The JCJ Alliance was formed by Information Security Professionals Jasmine Mack, Colin Safreed, and Jose Rosario.
         </div>
 
         <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
@@ -602,32 +602,6 @@
                 <h4>Ceo &amp; Founder</h4>
               </div>
             </div><!-- End testimonial item -->
-
-            <!--<div class="swiper-slide">
-              <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3></h3>
-                <h4>Designer</h4>
-              </div>
-            </div>--><!-- End testimonial item -->
-
-            <!--<div class="swiper-slide">
-              <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3></h3>
-                <h4>Store Owner</h4>
-              </div>
-            </div>--><!-- End testimonial item -->
 
 
             <div class="swiper-slide">
